lawrence township committee ballot page updated

--- a/child_pages/cc-elections/lawrence_township_committee_2024.html
+++ b/child_pages/cc-elections/lawrence_township_committee_2024.html
@@ -75,25 +75,57 @@
           <h4 class="quick-sum">quick summary</h4>
           <h6 class="page-title">House of Representatives for Congressional District 2</h6>
           <p>
-            This year our 1 seat is open for election in the US House of Representatives. The Republicans are running incumbent <a href="Candidates/van_drew.html">Jeff Van Drew</a> and the 
-            Democrats have nominated <a href="Candidates/salerno.html">Joe Salerno</a>. While Van Drew is an incumbent with inherently more experience than Salerno, Salerno has taken a 
-            clear position on his site to directly challenge Van Drew. When asked at Deerfield Day to clarify his experience, agenda, policy positions, and how those compare to Van Drew,
-            Salerno basically said (paraphrased): "I don't have a very specific agenda or policy positions. I was more inspired to run to help government become more unified and less divisive.
-            Van Drew also seems to lack a moral compass." While those seem like potentially valid perspectives, Van Drew has a lot more experience than Salerno, so it is the opinion of 
-            InformTheVote that a much more nuanced platform would be necessary to persuade informed voters, as it's one thing to present a general direction, it's another to have a specific 
-            plan of action and the experience to know how to execute it. However, if you generally lean Republican or Democrat, you can brush up on their platforms at the
-            <a href="https://prod-cdn-static.gop.com/media/documents/DRAFT_12_FINAL%5B1%5D-ben_1468872234.pdf">Republican Party Platform</a>, 
-            <a href="https://www.donaldjtrump.com/platform">Agenda 47</a> (Donald Trump's agenda), the
-            <a href="https://democrats.org/where-we-stand/party-platform/">Democrat Party Platform</a>, and wait for the Harris-Walz ticket 
-            to post their specific platform (still not posted as of 8/9/2024 <a href="https://kamalaharris.com/">Campaign Site</a>).
-            Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
+            As of today, 8/27/2024, we have no idea what's goin on with this election other than there are 2 candidates on the ballot.
           </p>
         </div>
     </dialog>
 
-    <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+    <!-- <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn"> -->
+
     <div id="sample-ballot">
+
+        <h4 class="sub-heading-ballot">What does a Township Committee Member do?</h4>
+        <div class="job-description can-sec">
+
+            A township committee member serves on the governing body of a township, which is a form of municipal government commonly found in New Jersey. The roles and responsibilities 
+            of township committee members include the following:
+            <br>
+            <br>
+
+            <details>
+                <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
+                Legislative Responsibilities: Township committee members are responsible for enacting ordinances, resolutions, and regulations that govern the township. They make 
+                decisions on local laws, zoning, land use, and other matters that impact the community.
+                <br>
+                <br>
+                Budgeting and Financial Oversight: Committee members participate in the development and approval of the township’s annual budget. This involves allocating funds to 
+                various departments, services, and projects, as well as setting tax rates and managing financial resources.
+                <br>
+                <br>
+                Executive Functions: The township committee also has executive responsibilities, such as appointing key officials (like the township administrator, attorney, or engineer)
+                and overseeing the implementation of policies and ordinances. In some townships, one committee member may serve as the mayor, who presides over meetings and represents 
+                the township in official matters.
+                <br>
+                <br>
+                Public Services and Infrastructure: Committee members oversee the provision of public services, including road maintenance, public safety, parks and recreation, and 
+                other essential services. They work to ensure that infrastructure projects are completed and that services are delivered efficiently.
+                <br>
+                <br>
+                Community Representation: As elected officials, township committee members represent the interests and concerns of the township’s residents. They engage with the 
+                community, attend public meetings, and respond to constituents' concerns to ensure that the local government is addressing the needs of the people.
+                <br>
+                <br>
+                Strategic Planning: Committee members are involved in long-term planning for the township, which may include land use planning, economic development initiatives, and 
+                efforts to improve the quality of life for residents.
+                <br>
+                <br>
+                Collaboration: In townships with a committee form of government, decisions are often made collaboratively, with members voting on important issues. The committee 
+                typically operates on a majority vote basis, where the collective input of the members shapes township policies and initiatives.
+            </details>
+        </div>
+
         <button class="quick-summary-reopen">quick summary</button>
+        
         <div class="sb-top-box"> 
             <h3>ELECTION DATE: November 7th, 2023</h3>
             <h2>SAMPLE BALLOT</h2>
