general updates for bridgeton school board pages

--- a/child_pages/cc-elections/Candidates/lingo.html
+++ b/child_pages/cc-elections/Candidates/lingo.html
@@ -78,11 +78,11 @@
             </div>
         </dialog>
 
-        <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+        <!-- <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn"> -->
 
 <div class="container">
 
-    <button class="quick-summary-reopen">quick summary</button>
+    <button class="quick-summary-reopen">quick candidate summary</button>
 
     <div class="title-info">
        <h2>Christina E. Lingo</h2>
