--- a/child_pages/cc-elections/Candidates/peterson.html
+++ b/child_pages/cc-elections/Candidates/peterson.html
@@ -73,16 +73,16 @@
               <h4 class="quick-sum">quick summary</h4>
               <h6 class="page-title">Mary A. Peterson</h6>
               <p>
-                We have not been able to find any information on Ms. Taylor as of yet.
+                We have not been able to find any information on Ms. Peterson as of yet.
               </p>
             </div>
         </dialog>
 
-        <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+        <!-- <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn"> -->
 
 <div class="container">
 
-    <button class="quick-summary-reopen">quick summary</button>
+    <button class="quick-summary-reopen">quick candidate summary</button>
 
     <div class="title-info">
        <h2>Mary A. Peterson</h2>
