--- a/child_pages/cc-elections/fairfield_school_board_2024.html
+++ b/child_pages/cc-elections/fairfield_school_board_2024.html
@@ -67,8 +67,81 @@
         </div>
     </div>
 
-    <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+    <!-- <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn"> -->
+
+    <dialog id="myModal" class="modal">
+
+        <!-- Modal content -->
+        <div class="modal-content">
+          <img src="../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
+          <h4 class="quick-sum">quick summary button</h4>
+          <h6 class="page-title">County Commissioner</h6>
+          <p>This year 3 seats are open on the Fairfield Township School Board. After scouring the internet and contacting the County Clerk's office via OPRA requests, we still, as of 
+            today 8/27/2024, have no pertinent information regarding this election. Click the red x at the top of this box and then scroll down down for more in-depth information.
+          </p>
+        </div>
+      
+      </dialog>
+
     <div id="sample-ballot">
+
+        <h4 class="sub-heading-ballot">What does a school board member do?</h4>
+        <div class="job-description can-sec">
+
+            School board members are elected or appointed officials who serve on a school board, which is responsible for overseeing the management and operation of a public school 
+            district. Their roles and responsibilities include:
+            <br>
+            <br>
+
+            <details>
+                <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
+                Setting Policies: School board members establish policies that govern the operation of the school district. These policies cover a wide range of areas, including 
+                curriculum standards, school safety, student discipline, and more.
+                <br>
+                <br>
+                Budgeting and Financial Oversight: The school board is responsible for approving the school district's budget. Members ensure that funds are allocated appropriately 
+                to meet the educational needs of the students while maintaining fiscal responsibility.
+                <br>
+                <br>
+                Hiring and Evaluating the Superintendent: One of the board's most significant responsibilities is hiring the district superintendent, who is the chief executive 
+                officer of the school district. The board also evaluates the superintendent's performance and can renew or terminate their contract.
+                <br>
+                <br>
+                Curriculum and Instruction: School board members have a say in the curriculum and instructional materials used in the district. They may approve or reject curriculum 
+                changes, new programs, and textbooks.
+                <br>
+                <br>
+                School Facilities and Infrastructure: The board oversees the maintenance and development of school facilities, including approving construction projects, repairs, 
+                and improvements to school buildings and grounds.
+                <br>
+                <br>
+                Policy Implementation: Once policies are set, the board ensures they are implemented effectively throughout the district. This includes monitoring compliance with 
+                state and federal education laws and regulations.
+                <br>
+                <br>
+                Economic Development: Commissioners often work on initiatives to promote economic growth in the county, including attracting businesses, supporting local agriculture, and 
+                fostering job creation.
+                <br>
+                <br>
+                Advocacy: School board members advocate for the needs of the district at the local, state, and federal levels. They may lobby for funding, legislation, or other 
+                resources to support the district's goals.
+                <br>
+                <br>
+                Community Engagement: Board members are responsible for engaging with the community, including parents, teachers, students, and other stakeholders. They listen to 
+                concerns, gather input, and communicate the board's decisions and policies to the public.
+                <br>
+                <br>
+                Academic Performance: The board monitors the academic performance of the district's schools and students. They review data and reports on student achievement, graduation 
+                rates, and other key metrics to ensure that the district is meeting educational goals.
+                <br>
+                <br>
+                Addressing Concerns and Grievances: School board members may hear and address concerns or grievances from parents, students, teachers, and other members of the 
+                community regarding district policies, decisions, or individual school issues.
+            </details>
+        </div>
+
+        <button class="quick-summary-reopen">quick election summary</button>
+
         <div class="sb-top-box"> 
             <h3>ELECTION DATE: November 7th, 2023</h3>
             <h2>SAMPLE BALLOT</h2>
