silva page updated

--- a/child_pages/cc-elections/Candidates/perez.html
+++ b/child_pages/cc-elections/Candidates/perez.html
@@ -73,7 +73,7 @@
               <h4 class="quick-sum">quick summary</h4>
               <h6 class="page-title">Donna M. Perez</h6>
               <p>
-                We have not been able to find any information on Mr. Woody as of yet.
+                We have not been able to find any information on Ms. Perez as of yet.
               </p>
             </div>
         </dialog>
