house of reps ballot page update

--- a/child_pages/cc-elections/house_of_representatives_2024.html
+++ b/child_pages/cc-elections/house_of_representatives_2024.html
@@ -91,9 +91,57 @@
         </div>
     </dialog>
 
-    <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+    <!-- <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn"> -->
+
     <div id="sample-ballot">
-        <button class="quick-summary-reopen">quick summary</button>
+
+        <h4 class="sub-heading-ballot">What does a Congressman do?</h4>
+        <div class="job-description can-sec">
+
+            A Congressman in the U.S. House of Representatives, commonly referred to as a Representative or Congressperson, has several key responsibilities and duties:
+            <br>
+            <br>
+
+            <details>
+                <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
+                Legislative Responsibilities: Representatives are responsible for introducing, debating, and voting on bills and resolutions. They play a crucial role in shaping 
+                federal laws and policies. Representatives can propose new laws, sponsor bills, and serve on committees that review legislation in specific areas, such as finance, 
+                education, or defense.
+                <br>
+                <br>
+                Constituent Representation: Each Representative serves a specific congressional district within a state and is elected to represent the interests and concerns of the 
+                people in that district. They engage with constituents through town halls, meetings, and other forms of communication to understand their needs and advocate for them 
+                in Congress.
+                <br>
+                <br>
+                Committee Work: Much of the detailed work of Congress is done in committees. Representatives are assigned to various committees based on their interests, expertise, 
+                and the needs of their district. In these committees, they review bills, conduct hearings, and make recommendations on whether the full House should consider a bill. 
+                Committees also oversee the implementation of federal laws and programs.
+                <br>
+                <br>
+                Voting: Representatives vote on proposed legislation, amendments, and other key decisions in the House. Their votes help determine the direction of federal policy on a 
+                wide range of issues, from national security to healthcare and education.
+                <br>
+                <br>
+                Budget and Appropriations: Representatives are involved in the federal budget process, which includes determining how much money the federal government will spend and 
+                on what programs. They help decide on appropriations, which allocate specific funding to different federal agencies and programs.
+                <br>
+                <br>
+                Constituent Services: Representatives and their staff provide various services to their constituents, such as helping with issues related to federal agencies (e.g., 
+                Social Security, veterans' benefits), providing information on government programs, and assisting with immigration and passport matters.
+                <br>
+                <br>
+                Oversight: Representatives have the power to conduct oversight of the executive branch and other federal agencies. This involves investigating how laws are implemented, 
+                ensuring that the government is operating efficiently, and holding hearings to address issues of public concern.
+                <br>
+                <br>
+                Collaboration: Representatives often work with other members of Congress, both within the House and the Senate, to build coalitions, draft legislation, and pass laws. 
+                They also work across party lines on issues that affect the entire nation or specific interests of their district.
+            </details>
+        </div>
+
+        <button class="quick-summary-reopen">quick election summary</button>
+        
         <div class="sb-top-box"> 
             <h3>ELECTION DATE: November 7th, 2023</h3>
             <h2>SAMPLE BALLOT</h2>
