--- a/child_pages/cc-elections/us_senate_2024.html
+++ b/child_pages/cc-elections/us_senate_2024.html
@@ -87,9 +87,61 @@
         </div>
     </dialog>
 
-    <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+    <!-- <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn"> -->
     <div id="sample-ballot">
-        <button class="quick-summary-reopen">quick summary</button>
+
+        <h4 class="sub-heading-ballot">What does a Congressman do?</h4>
+        <div class="job-description can-sec">
+
+            U.S. Senators play a critical role in the federal government, with duties that are distinct from those of Representatives in the House. Here's an overview of their responsibilities:
+            <br>
+            <br>
+
+            <details>
+                <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
+                Legislative Responsibilities: Senators participate in drafting, debating, and voting on federal legislation. They have the power to introduce bills and resolutions, 
+                and they play a significant role in shaping national policies across various areas, including the economy, healthcare, defense, and education.
+                <br>
+                <br>
+                Representation of States: Each U.S. Senator represents an entire state, unlike Representatives who serve specific districts. This means they must consider the interests 
+                of all their state's residents when making decisions and casting votes. Each state has two Senators, regardless of its population size, which balances representation 
+                between larger and smaller states.
+                <br>
+                <br>
+                Committee Work: Senators serve on various Senate committees, where much of the detailed work of the Senate is conducted. Committees review proposed legislation, 
+                hold hearings to gather information, and make recommendations on bills that should be considered by the full Senate. Key committees include those focused on finance, 
+                foreign relations, the judiciary, and defense.
+                <br>
+                <br>
+                Advice and Consent: One of the Senate's unique powers is to provide "advice and consent" on certain presidential actions. This includes confirming or rejecting 
+                presidential appointments to the federal judiciary, cabinet positions, and other key executive branch roles. The Senate also ratifies treaties with foreign nations, 
+                which requires a two-thirds vote.
+                <br>
+                <br>
+                Impeachment Trials: The Senate is responsible for conducting impeachment trials for federal officials, including the President, who has been impeached by the House of 
+                Representatives. Senators serve as jurors in these trials and determine whether the official should be removed from office.
+                <br>
+                <br>
+                Budget and Appropriations: While both the House and Senate are involved in the budget process, the Senate plays a crucial role in reviewing and amending the federal 
+                budget, as well as in appropriating funds for government programs and services. Senators help decide how federal funds are allocated and ensure that the budget reflects 
+                the priorities of their constituents.
+                <br>
+                <br>
+                National and International Influence: Senators often have significant influence on both national and international issues due to the Senate's role in foreign policy, 
+                defense, and high-profile legislative matters. They frequently work on complex and long-term policy challenges that require bipartisan cooperation.
+                <br>
+                <br>
+                Constituent Services: Like Representatives, Senators provide various services to their constituents, including assistance with federal agencies, responding to concerns 
+                and inquiries, and helping navigate issues related to federal programs.
+                <br>
+                <br>
+                Oversight and Investigations: The Senate has the power to conduct investigations into issues of national importance, often through its committees. This oversight 
+                function helps ensure that federal agencies and officials are operating within the law and serving the public interest.
+            </details>
+        </div>
+
+        <button class="quick-summary-reopen">quick election summary</button>
+
         <div class="sb-top-box"> 
             <h3>ELECTION DATE: November 7th, 2023</h3>
             <h2>SAMPLE BALLOT</h2>
@@ -235,8 +287,8 @@
                 
                 </div>
                 <div class="sb-top-box"> 
-                    <h4>Libertarian Party</h4>
-                    <h6>Partido Libertario</h6>  
+                    <h4>3rd Parties</h4>
+                    <h6>Terceros</h6>  
                 </div>
                 <div id="independent-candidates">
                     <div class="table-titles">
@@ -246,13 +298,13 @@
                         </div>
                         <div class="title">
                             <p class="title-letter">A</p>
-                            <p class="title-party">Libertarian Party</p>
-                            <p class="title-party-espanol">Partido Libertario</p>
+                            <p class="title-party">3rd Parties</p>
+                            <p class="title-party-espanol">Terceros</p>
                         </div>
                         <div class="title">
                             <p class="title-letter">B</p>
-                            <p class="title-party">Libertarian Party</p>
-                            <p class="title-party-espanol">Partido Libertario</p>
+                            <p class="title-party">3rd Parties</p>
+                            <p class="title-party-espanol">Terceros</p>
                         </div>
                         <div class="title">
                             <p class="title-party-pc">PERSONAL CHOICE</p>
