--- a/child_pages/cc-elections/us_senate_issues.html
+++ b/child_pages/cc-elections/us_senate_issues.html
@@ -66,7 +66,7 @@
         </div>
     </div>
 
-    <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+    <!-- <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn"> -->
 
     <div class="container">
         <div class="main-content-with-box-shadow-issues">
