--- a/child_pages/cc-elections/cc_vice_president_2024.html
+++ b/child_pages/cc-elections/cc_vice_president_2024.html
@@ -86,10 +86,55 @@
         </div>
     </dialog>
 
-    <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+    <!-- <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn"> -->
 
     <div id="sample-ballot">
-        <button class="quick-summary-reopen">quick summary</button>
+
+        <h4 class="sub-heading-ballot">What does a Congressman do?</h4>
+        <div class="job-description can-sec">
+
+            The Vice President of the United States has a unique role in the federal government, with both executive and legislative responsibilities. Here’s an overview of their duties:            <br>
+            <br>
+
+            <details>
+                <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
+                Presiding Over the Senate: The Vice President serves as the President of the Senate, where their primary role is to preside over Senate sessions. This includes managing 
+                the legislative process, recognizing senators to speak, and maintaining order during debates. However, the Vice President typically only attends Senate sessions during 
+                significant events or when their vote might be needed to break a tie.
+                <br>
+                <br>
+                Casting Tie-Breaking Votes: One of the most critical powers of the Vice President is the ability to cast tie-breaking votes in the Senate. Since the Senate is composed 
+                of 100 members, ties are possible, and the Vice President’s vote can determine the outcome of closely contested legislation or nominations.
+                <br>
+                <br>
+                Assuming the Presidency if Necessary: The Vice President is the first in the line of succession to the presidency. If the President dies, resigns, is removed from 
+                office, or becomes incapacitated, the Vice President assumes the role of President of the United States.
+                <br>
+                <br>
+                Advisory Role: The Vice President often serves as a key advisor to the President, providing counsel on various issues, including domestic policy, foreign affairs, and 
+                political strategy. The extent of the Vice President’s influence in this role can vary significantly depending on the administration and the relationship between the 
+                President and Vice President.
+                <br>
+                <br>
+                Diplomatic Duties: The Vice President often represents the United States in diplomatic matters, both domestically and internationally. This can include attending state 
+                functions, leading delegations to foreign countries, and engaging in diplomatic negotiations.
+                <br>
+                <br>
+                Participation in the Executive Branch: In addition to their legislative duties, the Vice President often participates in executive branch activities, such as attending 
+                cabinet meetings, overseeing specific initiatives or task forces, and helping to implement the President’s agenda.
+                <br>
+                <br>
+                Public Engagement and Advocacy: The Vice President frequently travels across the country and abroad to advocate for the administration’s policies, engage with the public,
+                and support the President’s re-election efforts or the campaigns of other political candidates within their party.
+                <br>
+                <br>
+                Other Assigned Duties: Depending on the administration, the Vice President may be assigned specific portfolios or responsibilities. For example, a Vice President might 
+                focus on areas like space policy, voting rights, or health care, based on the President’s priorities and the Vice President’s areas of expertise.
+            </details>
+        </div>
+
+        <button class="quick-summary-reopen">quick election summary</button>
+
         <div class="sb-top-box"> 
             <h3>ELECTION DATE: November 7th, 2023</h3>
             <h2>SAMPLE BALLOT</h2>
