--- a/child_pages/cc-elections/us_president_2024.html
+++ b/child_pages/cc-elections/us_president_2024.html
@@ -83,9 +83,66 @@
         </div>
     </dialog>
 
-    <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+    <!-- <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn"> -->
+
     <div id="sample-ballot">
-        <button class="quick-summary-reopen">quick summary</button>
+
+        <h4 class="sub-heading-ballot">What does a Congressman do?</h4>
+        <div class="job-description can-sec">
+
+            The President of the United States holds the highest executive office in the country and has a wide range of responsibilities and powers. Here’s an overview of the key 
+            duties of the President:           
+             <br>
+
+            <details>
+                <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
+                Chief Executive: The President serves as the head of the executive branch of the federal government. This role involves overseeing the implementation and enforcement 
+                of federal laws, managing the operations of federal agencies and departments, and appointing key officials, including Cabinet members, federal judges, and ambassadors 
+                (with Senate approval).
+                <br>
+                <br>
+                Commander in Chief: The President is the Commander in Chief of the U.S. Armed Forces. This role grants the President authority over military operations and decisions, 
+                including the deployment of troops, military strategy, and the use of nuclear weapons. However, the President’s ability to engage in military action is subject to 
+                Congressional oversight, particularly in terms of declaring war and funding military operations.
+                <br>
+                <br>
+                Chief Diplomat: The President directs U.S. foreign policy and represents the country in diplomatic matters. This includes negotiating treaties (which require Senate 
+                ratification), meeting with foreign leaders, and making decisions on international relations. The President also appoints ambassadors and other diplomatic officials.
+                <br>
+                <br>
+                Legislative Leader: Although the President cannot introduce legislation directly, they play a significant role in shaping the legislative agenda. The President can 
+                propose bills, work with Congress to pass legislation, and use the veto power to reject bills passed by Congress. The President also delivers the annual State of the 
+                Union address, outlining the administration’s priorities and goals.
+                <br>
+                <br>
+                Head of State: As the ceremonial leader of the country, the President represents the United States at official events and functions. This role includes hosting foreign 
+                dignitaries, bestowing honors and awards, and symbolizing national unity.
+                <br>
+                <br>
+                Economic Leader: The President is responsible for guiding the nation’s economic policy. This includes preparing the federal budget, recommending fiscal policies, and 
+                addressing economic issues such as unemployment, inflation, and taxation. The President also works with the Federal Reserve and other economic advisors to influence 
+                monetary policy.
+                <br>
+                <br>
+                Party Leader: The President often serves as the leader of their political party, helping to shape the party’s platform, support party candidates in elections, and 
+                influence party policies.
+                <br>
+                <br>
+                Crisis Manager: In times of national emergency or crisis, the President is expected to provide leadership and direction. This can involve responding to natural 
+                disasters, managing national security threats, or addressing public health emergencies.
+                <br>
+                <br>
+                Pardons and Clemencies: The President has the power to grant pardons and clemencies for federal offenses. This allows the President to forgive or lessen the sentences 
+                of individuals convicted of federal crimes.
+                <br>
+                <br>
+                Public Communicator: The President plays a key role in communicating with the American people, using speeches, press conferences, and social media to inform, persuade, 
+                and rally public support for policies and initiatives.
+            </details>
+        </div>
+
+        <button class="quick-summary-reopen">quick election summary</button>
+        
         <div class="sb-top-box"> 
             <h3>ELECTION DATE: November 7th, 2023</h3>
             <h2>SAMPLE BALLOT</h2>
