corrected some -what does a ____ do

--- a/child_pages/cc-elections/cc_vice_president_2024.html
+++ b/child_pages/cc-elections/cc_vice_president_2024.html
@@ -90,7 +90,7 @@
 
     <div id="sample-ballot">
 
-        <h4 class="sub-heading-ballot">What does a Congressman do?</h4>
+        <h4 class="sub-heading-ballot">What does the Vice President do?</h4>
         <div class="job-description can-sec">
 
             The Vice President of the United States has a unique role in the federal government, with both executive and legislative responsibilities. Here’s an overview of their duties:            <br>
