--- a/child_pages/cc-elections/us_president_2024.html
+++ b/child_pages/cc-elections/us_president_2024.html
@@ -87,7 +87,7 @@
 
     <div id="sample-ballot">
 
-        <h4 class="sub-heading-ballot">What does a Congressman do?</h4>
+        <h4 class="sub-heading-ballot">What does the President do?</h4>
         <div class="job-description can-sec">
 
             The President of the United States holds the highest executive office in the country and has a wide range of responsibilities and powers. Here’s an overview of the key 
@@ -142,7 +142,7 @@
         </div>
 
         <button class="quick-summary-reopen">quick election summary</button>
-        
+
         <div class="sb-top-box"> 
             <h3>ELECTION DATE: November 7th, 2023</h3>
             <h2>SAMPLE BALLOT</h2>
