--- a/child_pages/cc-elections/us_senate_2024.html
+++ b/child_pages/cc-elections/us_senate_2024.html
@@ -90,7 +90,7 @@
     <!-- <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn"> -->
     <div id="sample-ballot">
 
-        <h4 class="sub-heading-ballot">What does a Congressman do?</h4>
+        <h4 class="sub-heading-ballot">What does a US Senator do?</h4>
         <div class="job-description can-sec">
 
             U.S. Senators play a critical role in the federal government, with duties that are distinct from those of Representatives in the House. Here's an overview of their responsibilities:
