--- a/child_pages/cc-elections/Candidates/cossaboon.html
+++ b/child_pages/cc-elections/Candidates/cossaboon.html
@@ -74,6 +74,7 @@
               <h6 class="page-title">Carole E. Cossaboon</h6>
               <p>
                 As of right now, 8/27/2024, we have not received any significant information about Ms. Cossaboon outside of a quick review of her facebook sites.
+                Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
               </p>
             </div>
         </dialog>
