county clerk election updates

--- a/child_pages/cc-elections/Candidates/lods.html
+++ b/child_pages/cc-elections/Candidates/lods.html
@@ -77,7 +77,8 @@
                 such as Chief of Staff for a State Senator and she was the Executive Director for Habitat for Humanity. She is currently a County Commissioner. At a recent Republican breakfast 
                 meeting, Lods pointed out several things that could be seen as why she is running for the position and how she differentiates herself from the incumbent:
                 <br>
-                1. Competence for the role of County Clerk is important because they are responsible for elections and could make election related errors.
+                1. Competence for the role of County Clerk is important because they are responsible for elections and could make election related errors. The following might be an 
+                example of this: <a href="https://www.facebook.com/groups/781111154116727/?multi_permalinks=850813927146449&ref=share">NJ Globe Article</a>
                 <br>
                 2. It is important for the Clerk to actually show up for work on a regular basis and not focus on peripheral tasks such as ribbon cuttings.
                 <br>
@@ -85,7 +86,15 @@
                 <br>                
                 When asked in person about what the specific role is of the County Clerk and how she would differentiate herself from the incumbent, she responded "If you don't
                 know what the County Clerk does, that should tell you enough about how the role is being executed.", which I believe implies that the County Clerk should be 
-                acting as the known liason between the public and the government, which is a common perception of the role. 
+                acting as the known liason between the public and the government, which is a common perception of the role. She also released the following video to help clarify the 
+                role of the clerk:
+
+                <div class="video-box-modal can-sec">
+                    <h3 class="video-heading">Facebook Reel From Lods</h3>
+                
+                    <iframe src="https://www.facebook.com/reel/360821143737277" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>        
+                </div>  
+
                 Click the x at the top red of this box to go back to the page, then scroll down for more info.
               </p>
             </div>
