--- a/child_pages/cc-elections/cc_county_clerk_2024.html
+++ b/child_pages/cc-elections/cc_county_clerk_2024.html
@@ -77,7 +77,12 @@
           <p>This year the County Clerk seat is open for election. The current Democrat Clerk, <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/">Celeste Riley</a>, 
             is running for re-election against Republican challenger, <a href="https://www.ccrrogop.org/cumberlandcountyclerk2024">Commissioner Lods</a>.
             Both parties appear to be running 'slate', which means they are running as a team within their parties, potentially all the way up to the national level. All candidates have been
-            reached out to in terms of clarifying their individual characteristics, agendas, and comparisons to other candidates. None have responded to that specific detailed request. 
+            reached out to in terms of clarifying their individual characteristics, agendas, stances on clerk-related issues, and comparisons to other candidates. We have had some communication 
+            with both candidates and have received some relevant information, but not comprehensive responses for each of those topics. 
+            Celeste Riley, the incumbent, inherently has experience specifically for this position. However, some issues regarding the County Clerk Office have come up regarding the 
+            <a href="https://www.facebook.com/groups/781111154116727/?multi_permalinks=850813927146449&ref=share">design of the ballot</a> and how 
+            <a href="https://www.facebook.com/groups/442220931182672/permalink/870569048347856/?rdid=3pGglT6D1aPJ4RPa&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2Fv%2F4GMiyBpq5eJmUGZP">office literature</a>
+            is being presented to the public.
             So, if you vote party line, as of now, that's fair. If you're more of an independent who votes for individuals as opposed to parties, there is only a limited amount of info as of yet.
             Be sure to check out the  
             <a href="https://prod-cdn-static.gop.com/media/documents/DRAFT_12_FINAL%5B1%5D-ben_1468872234.pdf">Republican Party Platform</a> and 
@@ -86,11 +91,9 @@
             to post their specific platform (still not posted as of 8/27/2024 <a href="https://kamalaharris.com/">Campaign Site</a>). 
             <br>
             <br>
-            Celeste Riley, the incumbent, inherently has experience specifically for this position, so it is the opinion of Inform the Vote that there ought to be a comprehensive discussion as 
-            to why the Republican challenger would be significantly better or different than the incumbent, especially in terms of the specific local role they would hold. There has been some 
-            mention of this at Republican breakfast meetings, which brought up the issues that many citizens aren't aware of what the County Clerk does (which is concerning since the position is 
-            oftentimes referred to as a liaison between the citizens and the government), the execution (or lack thereof) of the incumbent, and the amount of time the incumbent spends doing the 
-            job. Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
+            , so it is the opinion of Inform the Vote that there ought to be a comprehensive discussion as 
+            to why the Republican challenger would be significantly better or different than the incumbent, especially in terms of the specific local role they would hold. 
+            Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
           </p>
         </div>
       
