house of reps updates, WIP

--- a/child_pages/cc-elections/house_of_representatives_2024.html
+++ b/child_pages/cc-elections/house_of_representatives_2024.html
@@ -287,10 +287,10 @@
 
 
                         <div class="sb-top-box"> 
-                            <h4>REPUBLICAN</h4>
-                            <h6>REPUBLICANO</h6>  
+                            <h4>Green Party</h4>
+                            <h6>Partido Verde</h6>  
                         </div>
-                        <div id="republican-candidates">
+                        <div id="green-candidates">
                             <div class="table-titles">
                                 <div class="title">
                                     <p class="title-big">OFFICE TITLE</p>
@@ -298,13 +298,13 @@
                                 </div>
                                 <div class="title">
                                     <p class="title-letter">A</p>
-                                    <p class="title-party">Republican</p>
-                                    <p class="title-party-espanol">Republicano</p>
+                                    <p class="title-party">Green Party</p>
+                                    <p class="title-party-espanol">Partido Verde</p>
                                 </div>
                                 <div class="title">
                                     <p class="title-letter">B</p>
-                                    <p class="title-party">Republican</p>
-                                    <p class="title-party-espanol">Republicano</p>
+                                    <p class="title-party">Green Party</p>
+                                    <p class="title-party-espanol">Partido Verde</p>
                                 </div>
                                 <div class="title">
                                     <p class="title-party-pc">PERSONAL CHOICE</p>
