--- a/child_pages/cc-elections/Candidates/cannavo.html
+++ b/child_pages/cc-elections/Candidates/cannavo.html
@@ -83,13 +83,13 @@
 <div class="container">
 
     <div class="title-info">
-        <h2>Joseph Salerno</h2>
+        <h2>Thomas Cannavo</h2>
          <div class="running-for">
              <div class="running-title">Running for: </div>
              <div class="position">US House of Representatives</div>
          </div>
          <div class="incum-or-challenger">
-             <div class="incumbent active">Incumbent</div>
+             <div class="incumbent inactive">Incumbent</div>
              <div class="challenger active">Challenger</div> 
          </div>
      </div>
