county clerk pages corrections

--- a/child_pages/cc-elections/Candidates/lods.html
+++ b/child_pages/cc-elections/Candidates/lods.html
@@ -88,12 +88,7 @@
                 know what the County Clerk does, that should tell you enough about how the role is being executed.", which I believe implies that the County Clerk should be 
                 acting as the known liason between the public and the government, which is a common perception of the role. She also released the following video to help clarify the 
                 role of the clerk:
-
-                <div class="video-box-modal can-sec">
-                    <h3 class="video-heading">Facebook Reel From Lods</h3>
-                
-                    <iframe src="https://www.facebook.com/reel/360821143737277" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>        
-                </div>  
+                <a href="https://www.facebook.com/reel/360821143737277">Facebook Reel</a>                  
 
                 Click the x at the top red of this box to go back to the page, then scroll down for more info.
               </p>
