--- a/child_pages/cc-elections/Candidates/riley.html
+++ b/child_pages/cc-elections/Candidates/riley.html
@@ -75,10 +75,13 @@
                 experience in this position than her Republican challenger, Commissioner Lods. She was an Assemblywoman in the 3rd district, having won re-election for 
                 that position, and served several committee positions during her tenure in that position. She has served as both a Bridgeton City Council member and the 
                 Bridgeton City Council president. A facebook post on August 13th states that her agenda will include streamlining county services, implementing transparency 
-                and accountability, and implementing community engagement. We have reached out to her for clarifications on overall agenda, policy, and comparisons to her challenger 
-                via official government email, but have not received a response as of yet. Also, during the process of trying to contact candidates for election related information, 
-                we reached out to her offices several times without substantive help provided. It may be that there is some technical or legal block to directly providing candidate 
-                information, but some of that is already publicly available on the County Clerk website, so coordination seems spotty at best. 
+                and accountability, and implementing community engagement. We have reached out to her for clarifications on overall agenda, policy, and comparisons to her challenger, 
+                but we are still working out whether she will provide information directly to us for concerns regarding potential partisanship on our part. During the process of 
+                trying to contact candidates for election related information, we reached out to her offices several times and were able to get useful contact information. As of now 
+                9/1/2024, there have been some issues regarding the Clerk's office regarding things such as the 
+                <a href="https://www.facebook.com/groups/781111154116727/?multi_permalinks=850813927146449&ref=share">design of the ballot</a> and how 
+                <a href="https://www.facebook.com/groups/442220931182672/permalink/870569048347856/?rdid=3pGglT6D1aPJ4RPa&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2Fv%2F4GMiyBpq5eJmUGZP">office literature</a>
+                is being presented to the public. 
                 Click the x at the top red of this box to go back to the page.
               </p>
             </div>
