us senate ballot color change test

--- a/child_pages/cc-elections/us_senate_2024.html
+++ b/child_pages/cc-elections/us_senate_2024.html
@@ -413,7 +413,7 @@
                                 <div class="org">
                                     <p>Green Party</p> 
                                 </div>
-                                <div class="first-name">
+                                <div class="first-name" id="green-candidates">
                                     <a href="Candidates/khalil.html">Christina</a>
                                 </div>
                                 <div class="number-a-and-circle"> 
@@ -422,7 +422,7 @@
                                 </div>   
                             </div>
                             <div class="a-row-2">
-                                <div class="last-name push-down-last-name">
+                                <div class="last-name push-down-last-name" id="green-candidates">
                                     <a href="Candidates/khalil.html">Khalil</a>
                                 </div>
                             </div>
