--- a/child_pages/cc-elections/Candidates/bashaw.html
+++ b/child_pages/cc-elections/Candidates/bashaw.html
@@ -125,15 +125,15 @@
                  <p>This election is on November 5th, 2024</p>
              </div>
              <div class="animal-box">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
              </div>
          </div>
      </div>
