--- a/child_pages/cc-elections/Candidates/mooneyham.html
+++ b/child_pages/cc-elections/Candidates/mooneyham.html
@@ -90,7 +90,7 @@
         </dialog>
 
 
-        <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+        <!-- <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn"> -->
         
 
 <div class="container">
