--- a/child_pages/cc-elections/Candidates/mooneyham.html
+++ b/child_pages/cc-elections/Candidates/mooneyham.html
@@ -143,7 +143,8 @@
      </div>
 
     <button class="quick-summary-reopen">quick candidate summary</button>
-            
+    
+    <div class="candidate-agenda">
             <h4 class="sub-heading">individual  agenda</h4>
             <div class="agenda-thesis can-sec">
                 <ul class="testa-agenda">
