put labels on salerno videos

--- a/child_pages/cc-elections/Candidates/salerno.html
+++ b/child_pages/cc-elections/Candidates/salerno.html
@@ -176,15 +176,15 @@
             <h4 class="sub-heading">Videos</h4>
             <div class="experience can-sec">
                 <ul>
-                    <li><a href="https://www.facebook.com/angela.p.jones.982/videos/7262044747231112/?rdid=35DirAT8Ddx55LPk">Campaign Event Speech</a></li>
+                    <li><a href="https://www.facebook.com/angela.p.jones.982/videos/7262044747231112/?rdid=35DirAT8Ddx55LPk">Criticisms of Van Drew Campaign Event Speech</a></li>
                 </ul>
-
+                <br>
                 <ul>
-                    <li><a href="https://www.facebook.com/angela.p.jones.982/videos/1555202248755117/?rdid=zGhYNzrUBsHvNS73">Campaign Event Speech</a></li>
+                    <li><a href="https://www.facebook.com/angela.p.jones.982/videos/1555202248755117/?rdid=zGhYNzrUBsHvNS73">Weirdness in Wildwood Campaign Event Speech</a></li>
                 </ul>
-
+                <br>
                 <ul>
-                    <li><a href="https://www.facebook.com/angela.p.jones.982/videos/1182729352966138/?rdid=ZGsB3kJN9l23RFgq">Campaign Event Speech</a></li>
+                    <li><a href="https://www.facebook.com/angela.p.jones.982/videos/1182729352966138/?rdid=ZGsB3kJN9l23RFgq">Take on Project 2025 Campaign Event Speech</a></li>
                 </ul>
             </div>
     </div>
