--- a/child_pages/cc-elections/Candidates/van_drew.html
+++ b/child_pages/cc-elections/Candidates/van_drew.html
@@ -132,15 +132,15 @@
              </div>
 
              <div class="animal-box">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
              </div>
          </div>
      </div>
