vp and presidential updates

--- a/child_pages/cc-elections/Candidates/walz.html
+++ b/child_pages/cc-elections/Candidates/walz.html
@@ -77,16 +77,17 @@
                 During that time he has supported the Affordable Care Act, improved Veterans Affairs, voted for the National Defense Authorization Act, supported farmers in rural 
                 Minnesota, promoted funding for public schools and making college more affordable, and generally tried to reduce carbon emissions and promoted renewable energy. He seems
                 to have a moderate stance on gun control, being a gun owner himself while pushing common sense gun law legislation. While he does have a lot of experience and has made many 
-                accomplishments, it is still unclear what the specific Harris-Walz agenda will be, since as of today 8/9/2024 no agenda is posted on their campaign site. One might be able 
-                to speculate based on the <a href="https://democrats.org/where-we-stand/party-platform/">*2020* Democrat Party Platform</a>, but we here at InformTheVote don't want to speculate 
-                too much. Hopefully as the campaign season evolves his platform will become clearer.
+                accomplishments, it is still unclear what the specific Harris-Walz agenda will be, since as of today 9/2/2024 no agenda is posted on their campaign site. One might be able 
+                to speculate based on the <a href="https://democrats.org/where-we-stand/party-platform/">*2020* Democrat Party Platform</a> and brief statements they have made at 
+                rallies and interviews, but we here at InformTheVote don't want to speculate too much, especially since the primary focus of this site is raising awareness about local 
+                politics. Hopefully as the campaign season evolves his platform will become clearer.
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
               </p>
             </div>
         </dialog>
 
 
-        <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+        <!-- <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn"> -->
 
 
 <div class="container">
@@ -128,15 +129,15 @@
              </div>
 
              <div class="animal-box">
-                 <img src="../../../assets/candidates/libertarianLogo.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/libertarianLogo.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/libertarianLogo.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/libertarianLogo.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/libertarianLogo.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/libertarianLogo.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/libertarianLogo.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/libertarianLogo.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/libertarianLogo.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
              </div>
          </div>
      </div>
@@ -151,9 +152,9 @@
             <div class="agenda-thesis can-sec">
                 <br>
                 <ul>
-                    <li>It is currently unclear what the specific Harris-Walz agenda is, since as of today 8/9/2024 one is not posted on their campaign site. You might be able to 
-                        speculate based on the <a href="https://democrats.org/where-we-stand/party-platform/">Democrat Party Platform</a>, and the general list of accomplishments 
-                        on the Harris-Walz campaign site, but we here at InformTheVote are trying not to speculate.
+                    <li>It is currently unclear what the specific Harris-Walz agenda is, since as of today 9/2/2024 one is not posted on their campaign site. You might be able to 
+                        speculate based on the <a href="https://democrats.org/where-we-stand/party-platform/">*2020* Democrat Party Platform</a>, brief statements made at rallies 
+                        and interviews, and the general list of accomplishments on the Harris-Walz campaign site, but we here at InformTheVote are trying not to speculate.
                     </li>
                 </ul>
             </div>
