--- a/child_pages/cc-elections/Candidates/vance.html
+++ b/child_pages/cc-elections/Candidates/vance.html
@@ -99,7 +99,7 @@
             </div>
         </dialog>
 
-        <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+        <!-- <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn"> -->
 
 <div class="container">
 
