extra statement on de la cruz page

--- a/child_pages/cc-elections/Candidates/de-la-cruz.html
+++ b/child_pages/cc-elections/Candidates/de-la-cruz.html
@@ -78,7 +78,8 @@
                 providing guaranteed social programs by making them constitutional rights, imposing a 100% tax on income over ten million dollars, etc. She aims to take money out of 
                 politics (like corporate lobbying), wants to end aid to Israel to the extent that she has participated in the recent protests, wants to cut the military budget by 
                 90%, wants to war on black America (reparations, increase affirmative action, address police brutality, etc.), unrestricted and free abortion access, full equality for 
-                the LGBTQ community, and immediate takeover of the fossil fuel industry.
+                the LGBTQ community, and immediate takeover of the fossil fuel industry. As a reminder, our focus for this site is local politics, and this is only a brief summary. 
+                If you are interested in the presidential race and lesser known candidates, we suggest that you follow along yourself with the provided sources below. 
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.                    
               </p>
             </div>
@@ -89,7 +90,7 @@
 <div class="container">
 
     <div class="title-info">
-        <h2>Robert F. Kennedy, Jr.</h2>
+        <h2>Claudia De La Cruz</h2>
          <div class="running-for">
              <div class="running-title">Running for: </div>
              <div class="position">President</div>
