oliver page updates

--- a/child_pages/cc-elections/Candidates/kaplan.html
+++ b/child_pages/cc-elections/Candidates/kaplan.html
@@ -75,6 +75,7 @@
               <p>
                 As we continue to research, it is not quite obvious where any direct information about Kenneth Kaplan is. He is part of the Libertarian Party, so you can get 
                 some general information about them <a href="https://www.lp.org/">here</a>.
+                Click the red x at the top of this box and then scroll down down for more in-depth information and sources.                    
               </p>
             </div>
         </dialog>
